# streamflow-ml

./: Caddyfile  Dockerfile  README.md  docker-compose.yml  hhp_docs.md  partition_latest.py  post.py  pyproject.toml
scripts/: partition.py  partition_latest.py  post.py  upload_latest.sh
src/streamflow_ml/: __init__.py
src/streamflow_ml/api/: crud.py  ingest.py  main.py  schemas.py
src/streamflow_ml/db/: __init__.py  models.py  timescale.py
