[project]
name = "streamflow-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.3",
    "geoalchemy2>=0.15.2",
    "ipykernel>=6.29.5",
    "polars>=1.10.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
